fix: setup theme directory for GitHub Actions build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,8 @@ jobs:
 
             - name: Build
               run: |
+                  mkdir -p themes/zero-academic-page
+                  cp -r archetypes assets layouts theme.toml themes/zero-academic-page/
                   cd exampleSite
                   hugo --minify --gc
 
