--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -9,8 +9,9 @@ enableGitInfo = true
 # disable taxonomy, term and RSS (which removes categories, tags and index.xml)
 disableKinds = ["taxonomy", "term", "RSS"]
 
-# theme
-theme = "zero-academic-page"
+[module]
+[[module.imports]]
+path = "github.com/geekifan/zero-academic-page"
 
 [build]
   writeStats = false
