feat: remove language selector and disable multi-language support

--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -1,7 +1,5 @@
 baseURL = 'https://bugmakercc.github.io/chong/'
-
-# multi-language support
-defaultContentLanguage = 'en'
+languageCode = 'en-US'
 
 # enable git info
 enableGitInfo = true
